2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: print name of cpu type
 
	* dae/op_stop:
	* dae/op_start: re-organise, tidy
 
2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: fix small but triggerable
	  SMP dump race
 
2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h:
	* oprofile.c:
	* op_x86.c: move some code about
 
	* op_syscalls.c: add comment
 
2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: remove warning
 
	* op_user.h: 
	* op_events.c: fix and clean up cpu type detection
 
	* op_init.c: fix email
 
	* oprofile.c: add IRQ stats. Not sure whether to keep...
 
2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h:
	* oprofile.c: use cpu_number_map (pedantry thing)
 
2001-09-07  Philippe Elie  <ph_e@club-internet.fr>

	* oprofile.c: remove /proc/.../cpu_type. Check if user
	  mode cpu type detection is identical to module cpu type
	* op_events.h:
	* op_events.c: add op_get_cpu_type(). script can get cpu_type
	  by op_help --get-cpu-type
	* gui/oprofile: use it	
	* dae/oprofiled.c: ditto
	* dae/op_start: ditto, pass expected_cpu_type to module
	* doc/oprofile.sgml: update
	* doc/oprofile.1.in: update
	* pp/oprofpp.c: get cpu_type from samples file
	* pp/opf_filter.cpp: get cpu type from stdin

2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: use j not i in msync !
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: more sanity checking of options
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: update a bit
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* <most files>: make op_nr_counters a var (no pp support for > 2 yet)
	 
	* dae/oprofiled.c: don't print help when counter event etc. are wrong
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h:
	* oprofile.c: use MODULE_LICENSE
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* op_user.h: add missing prototype

	* dae/op_start: fix counter extraction
 