@@ -1,3 +1,9 @@
+2001-09-12  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/oprofpp.c: fix cpu type output for opf_filter
+
+	* dae/op_stop: return error code properly
+
 2001-09-12  John Levon  <moz@compsoc.man.ac.uk>
 
 	* pp/oprofpp.c: print name of cpu type
